--- a/scenarioS/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioS/weather/forecast/hourly/on-118_metric_e.html
@@ -211,6 +211,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <th class="wxo-th-bkg" colspan="6"></th>
       </tr>
       <tr>
+	       <tr>
+        <th class="wxo-th-bkg" colspan="5">01 January 2017</th>
+      </tr>
+      <tr>
         <td headers="header1" class="text-center">15:00</td>
        <td headers="header2" class="text-center">-6</td>
         <td headers="header3" class="media"><span class="pull-left"><img class="media-object" height="35" width="35" src="../../weathericons/small/18.png" alt="Heavy Snow"/></span><div class="media-body">
@@ -341,7 +345,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <td headers="header7" class="text-center">-14</td>
       </tr>
 	   <tr>
-        <th class="wxo-th-bkg" colspan="5">Tomorrow</th>
+        <th class="wxo-th-bkg" colspan="5">02 January 2017</th>
       </tr>
       <tr>
          <tr>
