--- a/scenarioA/weather/city/pages/on-118_metric_e.html
+++ b/scenarioA/weather/city/pages/on-118_metric_e.html
@@ -193,7 +193,7 @@
 <h1 id="wb-cont" property="name">Ottawa (Kanata - Orléans), <abbr title="Ontario">ON</abbr>
 </h1>
 <div id="container">
-  <div id="noalert" class="hidden-print"><h2><a href="../../weather/warnings/index_e.html">No Alerts in effect</a></h2></div>
+  <div id="noalert" class="hidden-print"><h2><a href="../weather/warnings/index_e.html">No Alerts in effect</a></h2></div>
   <div id="mainContent" class="mrgn-tp-lg">
     <section>
       <details class="panel panel-default hidden-xs" open="open">
