--- a/scenarioA/weather/city/pages/on-118_metric_e.html
+++ b/scenarioA/weather/city/pages/on-118_metric_e.html
@@ -14,7 +14,7 @@
    <meta name="dcterms.modified" title="W3CDTF" content="2017-09-05" />
 <!--wxo-b3-->
 <title>Ottawa (Kanata - Orléans), ON - 7 Day Forecast - Environment Canada</title>
-<meta name="dcterms.title" content="St. John's, NL - 7 Day Forecast - Environment Canada">
+<meta name="dcterms.title" content="Ottawa (Kanata - Orléans) - 7 Day Forecast - Environment Canada">
 <!--[if gte IE 9 | !IE ]><!-->
  <link href="../../../weather/template/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon" />
  <link rel="stylesheet" href="../../../weather/template/GCWeb/css/theme.min.css" />
