--- a/scenarioA/weather/city/pages/on-118_metric_e.html
+++ b/scenarioA/weather/city/pages/on-118_metric_e.html
@@ -209,7 +209,7 @@
             <a href="../../../weather/radar/xft-index_e.html">Radar</a>
           </li>
           <li class="brdr-lft">
-            <a href="../../weather/satellite/index_e.html">Satellite</a>
+            <a href="../../../weather/satellite/index_e.html">Satellite</a>
           </li>
           <li class="brdr-lft">
             <a href="../../../weather/lightning/index_e.html">Lightning</a>
