--- a/scenarioA/weather/airquality/pages/onaq-008_e.html
+++ b/scenarioA/weather/airquality/pages/onaq-008_e.html
@@ -175,16 +175,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <main role="main" property="mainContentOfPage" id="TTT" class="container">
 <h1 id="wb-cont">Ottawa - Air Quality Health Index
 	</h1>
-	
 <section class="visible-md visible-lg visible-sm overflow-hide">
-
-
   <div class="col-md-10 col-md-push-1">
-	<div id="statement">
-	<h2>
-	<a href="../../warnings/ottawa-report_e.html">SPECIAL AIR QUALITY STATEMENT  IN EFFECT</a>
-	</h2>
-	</div>
     <div class="row wxo-title-box">
       <div class="navcontainer wxo-vertical-align">
         <div class="col-md-4 col-sm-4">
@@ -193,11 +185,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <div class="nowrap col-md-4 col-sm-4 col-lg-4 col-lg-push-5 col-md-push-4 col-sm-push-4">
           <ul class="navListBar">
             <li>
-              <a href="/airquality/pages/trends/onaq-008_e.html">Past 24 hr</a>
-            </li>
-            <li>
-              <a href="/airquality/multiStation_e.html?code=onaq-008">
-                <abbr title="Air Quality Health Index">AQHI</abbr> by Station</a>
+              <a class="col-md-6 col-sm-6 col-md-offset-5 col-sm-offset-5 wxo-vertical-align" href="/airquality/pages/trends/nlaq-001_e.html">Past 24 hr</a>
             </li>
           </ul>
         </div>
@@ -207,19 +195,21 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <div class="margin-top-small margin-bottom-small indent-medium">
         <strong class="bold">
           <a href="http://www.ec.gc.ca/cas-aqhi/default.asp?lang=En&amp;n=3E3FDF68-1#wsA52DC9CF">Calculated at:</a>
-        </strong>4:00 PM EDT Wednesday 23 September 2017</div>
+        </strong>4:30 PM EST Tuesday  5 September 2017</div>
       <div class="col-md-12 align-center">
         <div class="col-md-offset-1 col-lg-offset-2 col-sm-offset-1">
           <div class="font-large black">
             <div class="indexBarWithInvisibleBorders clr-chart-big-width bar1Invisible"></div>
+            <div class="indexBarWithInvisibleBorders clr-chart-big-width">
+              <p class="withBorder">2<span class="wb-invisible">Low Risk</span></p>
+              <div class="arrow-down"></div>
+            </div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
-            <div class="indexBarWithInvisibleBorders clr-chart-big-width">              <p class="withBorder">8<span class="wb-invisible">High Risk</span></p>
-              <div class="arrow-down"></div></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
             <div class="indexBarWithInvisibleBorders clr-chart-big-width"></div>
@@ -299,7 +289,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <div class="nowrap col-md-4 col-sm-4 col-lg-4 col-lg-push-5 col-md-push-4 col-sm-push-4">
           <ul class="navListBar">
             <li>
-              <a href="/airquality/pages/next18Hourlies/onaq-008_e.html">Next 18 hr</a>
+              <a href="/airquality/pages/next18Hourlies/nlaq-001_e.html">Next 18 hr</a>
             </li>
             <li>
               <a href="/airquality/healthmessage_e.html">Health Message</a>
@@ -310,25 +300,24 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
     </div>
     <div class="row wxo-content-box">
       <div class="margin-top-small margin-bottom-small indent-medium border-bottom-none">
-        <strong>Issued at: </strong>5:00 PM EDT Wednesday 23 August 2017</div>
+        <strong>Issued at: </strong>5:00 PM NDT Tuesday 5 September 2017</div>
       <br>
       <div class="row margin-top-small margin-bottom-small indent-medium border-bottom-none">
         <div class="col-md-2 col-sm-3">
-          <p>Wednesday night</p>
+          <p>Tuesday night</p>
         </div>
         <div class="col-md-4 col-sm-3">
-          <b>5 -
-						</b>Moderate Risk</div>
+          <b>2 -
+						</b>Low Risk</div>
         <div class="col-md-6 col-sm-6 row-end">
           <div class="font-large black">
             <div class="clr-chart-small clr-chart-small-width bgValue1 bar1"></div>
             <div class="bott clr-chart-small clr-chart-small-width bgValue2">
+              <div class="push-up arrow-down"></div>
             </div>
             <div class="clr-chart-small clr-chart-small-width bgValue3"></div>
             <div class="clr-chart-small clr-chart-small-width bgValue4"></div>
-            <div class="clr-chart-small clr-chart-small-width bgValue5">
-			 <div class="push-up arrow-down"></div>
-			 </div>
+            <div class="clr-chart-small clr-chart-small-width bgValue5"></div>
             <div class="clr-chart-small clr-chart-small-width bgValue6"></div>
             <div class="clr-chart-small clr-chart-small-width bgValue7"></div>
             <div class="clr-chart-small clr-chart-small-width bgValue8"></div>
@@ -340,7 +329,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       </div>
       <div class="row margin-top-small margin-bottom-small indent-medium border-bottom-none">
         <div class="col-md-2 col-sm-3">
-          <p>Thursday</p>
+          <p>Wednesday</p>
         </div>
         <div class="col-md-4 col-sm-3">
           <b>2 -
@@ -370,16 +359,16 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <div id="whoAtRisk" class="float-left col-md-6 col-sm-5">
         <p class="bold font-large">Who is at risk?</p>
         <p>People with heart and lung conditions are most affected by air pollution.</p>
-        <p>To find out if you are at risk, consult <a href="http://www.ec.gc.ca/cas-aqhi/default.asp?lang=En&amp;n=8727DF6F-1">the health guide</a>, your physician, or your <a href="http://www.ec.gc.ca/cas-aqhi/default.asp?lang=En&amp;n=F1AD2670-1#X-2014010912050716">local health authority</a>.</p>
+        <p>To find out if you are at risk, consult <a href="http://www.ec.gc.ca/cas-aqhi/default.asp?lang=En&amp;n=8727DF6F-1">the health guide</a>, or your physician.</p>
         <p>Visit the <a href="http://www.ec.gc.ca/cas-aqhi/default.asp?lang=En&amp;n=CB0ADB16-1"> national AQHI Web site</a> to learn more about the AQHI. </p>
       </div>
       <div id="didUknow" class="float-right col-md-6 col-sm-5">
         <p class="bold font-large">Did you know...?</p>
-        <p>You can change your lifestyle to reduce air pollution levels: drive less, use energy more efficiently at home and make wise choices as a consumer. </p>
+        <p>Negative health effects increase as air pollution worsens.  </p>
       </div>
     </div>
     <br>
-    <p class="width-90 text-center partners">The AQHI is an initiative between Environment Canada, Health Canada and the Province of Ontario.</p>
+    <p class="width-90 text-center partners">The AQHI is an initiative between Environment Canada, Health Canada, Environment and Conservation, Newfoundland and Labrador and Health and Community Services, Newfoundland and Labrador.</p>
   </div>
 </section>
 <section class="visible-xs">
@@ -398,7 +387,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 						Low Risk</p>
       <details>
         <summary>Condition details</summary>
-        <p>Calculated at: 4:00 PM EDT Wednesday 23 August 2017</p>
+        <p>Calculated at: 4:30 PM EST Tuesday  5 September 2017</p>
       </details>
     </div>
   </div>
@@ -414,33 +403,29 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <div class="col-xs-12 font-small wxo-content-box">
     <div class="row col-xs-12">
       <br>
-      <div class="col-xs-12 boldSmoke">Wednesday night</div>
+      <div class="col-xs-12 boldSmoke">Tuesday night</div>
       <div class="col-xs-12">
-        <strong>8 -	</strong>High Risk</div>
+        <strong>2 -	</strong>Low Risk</div>
       <br>
       <br>
       <br>
-      <div class="col-xs-12 boldSmoke">Thursday</div>
+      <div class="col-xs-12 boldSmoke">Wednesday</div>
       <div class="col-xs-12">
-        <strong>4 -	</strong>Moderate Risk</div>
+        <strong>2 -	</strong>Low Risk</div>
       <br>
       <br>
       <br>
       <br>
       <details>
         <summary>Forecast details</summary>
-        <p>Issued at: 5:00 PM EDT Wednesday 23 August 2017</p>
+        <p>Issued at: 5:00 PM NDT Tuesday 5 September 2017</p>
       </details>
     </div>
   </div>
   <div>&nbsp;</div>
   <ul>
     <li>
-      <a href="/airquality/pages/trends/onaq-008_e.html">Past 24 hr</a>
-    </li>
-    <li>
-      <a href="/airquality/multiStation_e.html?code=onaq-008">
-        <abbr title="Air Quality Health Index">AQHI</abbr> by Station</a>
+      <a href="/airquality/pages/trends/nlaq-001_e.html">Past 24 hr</a>
     </li>
     <li>
       <a href="http://www.ec.gc.ca/cas-aqhi/default.asp?lang=En&amp;n=8727DF6F-1">Am I at Risk?</a>
@@ -449,13 +434,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <a href="http://www.ec.gc.ca/cas-aqhi/default.asp?lang=En&amp;n=CB0ADB16-1">What can I do about it?</a>
     </li>
     <li>
-      <a href="/airquality/pages/next18Hourlies/onaq-008_e.html">Next 18 hr</a>
+      <a href="/airquality/pages/next18Hourlies/nlaq-001_e.html">Next 18 hr</a>
     </li>
     <li>
       <a href="/airquality/healthmessage_e.html">Health Message</a>
     </li>
   </ul>
-  <p class="width-90 partners text-center">The AQHI is an initiative between Environment Canada, Health Canada and the Province of Ontario.</p>
+  <p class="width-90 partners text-center">The AQHI is an initiative between Environment Canada, Health Canada, Environment and Conservation, Newfoundland and Labrador and Health and Community Services, Newfoundland and Labrador.</p>
 </section>
 <!--WXO_BANNER_PLACEHOLDER-->
 <section class="hidden-print"  id="weather-topics">
