--- a/scenarioA/weather/city/pages/on-118_metric_e.html
+++ b/scenarioA/weather/city/pages/on-118_metric_e.html
@@ -1200,7 +1200,7 @@
 <script src="../../../weather/cacheable/js/myprofile/refresher-1.0.min.js"></script>
 <script type="text/javascript" src="../../../weather/city/js/cityjump.js"></script>
 <script src="../../../weather/GCWeb/js/theme.min.js"></script>
-
+<script>
       document.getElementById("jump").className = "";
       var max_chars = 50;
 
