--- a/scenarioAfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioAfr/weather/city/pages/on-118_metric_e.html
@@ -178,18 +178,18 @@
                                 <li><a href="#">Service canadien des glaces</a></li>
                                 <li><a href="#">Prévisions saisonnières</a></li>
                                 <li><a href="#">Prévisions à long terme</a></li>
-                                <li><a href="../../../weather/mainmenu/alert_menu_e.html">Alertes météo publiques - Canada</a></li>
-                                <li><a href="../../../weather/lightning/index_e.html">Lightning</a></li>
-                                <li><a href="#">Hurricane</a></li>
-                                <li><a href="#">Weather Summaries</a></li>
-                                <li><a href="#">Hazardous Weather</a></li>
-                                <li><a href="#">Global and Regional forecast models</a></li>
-                                <li><a href="#">Astronomy</a></li>
-                                <li><a href="#">Historical Climate Data</a></li>
+                                <li><a href="../../../weather/warnings/index_e.html">Alertes météo publiques - Canada</a></li>
+                                <li><a href="../../../weather/lightning/index_e.html">Foudre</a></li>
+                                <li><a href="#">Ouragans</a></li>
+                                <li><a href="#">Résumés météorologiques</a></li>
+                                <li><a href="#">Conditions météorologiques dangereuses</a></li>
+                                <li><a href="#">Modèles global et régional de prévision</a></li>
+                                <li><a href="#">Astronomie</a></li>
+                                <li><a href="#">Niveau d'eau et débit</a></li>
                                 <li><a href="#">Aviation</a></li>
-                                <li><a href="#">Guide to Public forecasts</a></li>
-                                <li><a href="#">Guide to Marine forecasts</a></li>
-                                <li><a href="#">Guide to Air Quality forecasts</a></li>
+                                <li><a href="#">Guide des prévisions météorologiques</a></li>
+                                <li><a href="#">Guide des prévisions maritimes</a></li>
+                                <li><a href="#">Guide sur les prévisions de la cote air santé</a></li>
 	</div>
 	</div>
 </section>
@@ -202,12 +202,12 @@
 <h1 id="wb-cont" property="name">Ottawa (Kanata - Orléans), <abbr title="Ontario">ON</abbr>
 </h1>
 <div id="container">
-  <div id="noalert" class="hidden-print"><h2><a href="../../../weather/warnings/index_e.html">No Alerts in effect</a></h2></div>
+  <div id="noalert" class="hidden-print"><h2><a href="../../../weather/warnings/index_e.html">Aucune alerte en vigueur</a></h2></div>
   <div id="mainContent" class="mrgn-tp-lg">
     <section>
       <details class="panel panel-default hidden-xs" open="open">
         <summary class="panel-heading">
-          <h2>Current Conditions<span class="small visible-print-inline-block pull-right">Observed at: Ottawa Macdonald-Cartier Int'l Airport   3:30 PM EST Tuesday 5 September 2017</span></h2>
+          <h2>Current Conditions<span class="small visible-print-inline-block pull-right">Enregistrées à : Aéroport int. Macdonald-Cartier d'Ottawa  3h30 PM HAE le mardi septembere 2017</span></h2>
         </summary>
     <ul class="hidden-print hidden-xs pull-right list-inline mrgn-rght-sm mrgn-bttm-0 wxo-moveup">
           <li>
@@ -251,11 +251,12 @@
           </div>
           <div class="col-sm-10 text-center">
             <dl class="dl-horizontal mrgn-bttm-0 hidden-xs wxo-conds-tmp mrgn-tp-sm">
-              <dt>Observed at:</dt>
-              <dd class="mrgn-bttm-0">Ottawa Macdonald-Cartier Int'l Airport</dd>
+              <dt> Enregistrées à :</dt>
+              <dd class="mrgn-bttm-0">Aéroport int. Macdonald-Cartier d'Ottawa</dd>
               <dt>Date: </dt>
-              <dd class="mrgn-bttm-0">3:30 PM EST Tuesday 5 September 2017</dd>
+              <dd class="mrgn-bttm-0">3h30 PM HAE le mardi septembere 2017</dd>
             </dl>
+           
             <div class="row no-gutters wb-eqht brdr-tp">
               <div class="col-sm-4 brdr-rght-city">
                 <dl class="dl-horizontal wxo-conds-col1">
@@ -429,10 +430,10 @@
         <details class="wxo-detailsconds mrgn-tp-md" open="open">
           <summary>Conditions details</summary>
           <dl class="dl-horizontal mrgn-bttm-lg wxo-conds-xs">
-            <dt>Observed at:</dt>
-            <dd class="mrgn-bttm-0">Ottawa Macdonald-Cartier Int'l Airport</dd>
+            <dt>Enregistrées à :</dt>
+            <dd class="mrgn-bttm-0">Aéroport int. Macdonald-Cartier d'Ottawa</dd>
             <dt>Date: </dt>
-            <dd class="mrgn-bttm-0">3:30 PM EST Tuesday 5 September 2017</dd>
+            <dd class="mrgn-bttm-0">3h30 PM HAE le mardi septembere 2017</dd>
           </dl>
           <dl class="dl-horizontal wxo-conds-xs ">
             <dt>Condition:</dt>
