--- a/scenarioSfr/weather/radar/xft-index_e.html
+++ b/scenarioSfr/weather/radar/xft-index_e.html
@@ -270,7 +270,7 @@
 			
 			
 
-			<img 
+		<!--	<img 
 			width="580" 
 			height="480" 
 			src="../cacheable/images/radar/layers_detailed/default_cities/xft_towns.gif" 
@@ -286,7 +286,7 @@
 
 			<img class="overlay-img-nojs overlay-img img-responsive " width="580" height="480" src="../cacheable/images/radar/layers_detailed/radar_circle/radar_circle.gif" alt="Radar Circles" id="radar_circle" style="z-index: 58;">
 			
-			
+              -->
 
 			<div class="wrapper">
 			
