--- a/scenarioSfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioSfr/weather/city/pages/on-118_metric_e.html
@@ -269,7 +269,7 @@
                   </dd>
                   <dd class="mrgn-bttm-0 wxo-imperial-hide wxo-city-hidden">29,9 pouces</dd>
                   <dt>Tendance :</dt>
-                  <dd class="mrgn-bttm-0">Rising</dd>
+                  <dd class="mrgn-bttm-0">À la hausse</dd>
                 </dl>
               </div>
               <div class="col-sm-4 brdr-rght-city">
@@ -343,7 +343,7 @@
               </dd>
               <dd class="mrgn-bttm-0 wxo-imperial-hide wxo-city-hidden">29.9 pouces</dd>
               <dt>Tendance :</dt>
-              <dd class="mrgn-bttm-0">Rising</dd>
+              <dd class="mrgn-bttm-0">À la hausse</dd>
             </dl>
           </div>
           <div class="col-sm-3">
@@ -445,7 +445,7 @@
             </dd>
             <dd class="mrgn-bttm-0 wxo-imperial-hide wxo-city-hidden">29,9 pouces</dd>
             <dt>Tendance :</dt>
-            <dd class="mrgn-bttm-0">Rising</dd>
+            <dd class="mrgn-bttm-0">À la hausse</dd>
             <dt>Visibility:</dt>
             <dd class="mrgn-bttm-0 wxo-metric-hide">24 <abbr title="kilometres">km</abbr>
             </dd>
