--- a/scenarioAfr/weather/city/pages/on-118_metric_e.html
+++ b/scenarioAfr/weather/city/pages/on-118_metric_e.html
@@ -1408,7 +1408,7 @@
             <a href="#wb-cont">Haut de la page <span class="glyphicon glyphicon-chevron-up"></span></a>
          </div>
          <div class="col-xs-6 col-md-2 text-right">
-            <object type="image/svg+xml" tabindex="-1" role="img" data="../weather/template/GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+            <object type="image/svg+xml" tabindex="-1" role="img" data="../../../weather/template/GCWeb/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
          </div>
       </div>
    </div>
