--- a/ut-en.html
+++ b/ut-en.html
@@ -27,7 +27,7 @@
 			defTop.outerHTML = wet.builder.top({
 				lngLinks: [{
 					lang: "fr",
-					href: "transactional-fr.shtml",
+					href: "https://gc-proto.github.io/weather/ut-en.html",
 					text: "Français"
 				}],
 				breadcrumbs: [{
