--- a/ut-en.html
+++ b/ut-en.html
@@ -42,6 +42,7 @@
 
 <main role="main" property="mainContentOfPage" class="container">
 <h1 property="name" id="wb-cont" class="h2">Weather test links</h1>
+	<li><a href=https://gc-proto.github.io/weather/ut-en.html"> French </a></li>
 <section>
 
 <ul class="lst-spcd">
