--- a/ut-en.html
+++ b/ut-en.html
@@ -27,7 +27,7 @@
 			defTop.outerHTML = wet.builder.top({
 				lngLinks: [{
 					lang: "fr",
-					href: "https://gc-proto.github.io/weather/ut-en.html",
+					href: "https://gc-proto.github.io/weather/ut-fr.html",
 					text: "Français"
 				}],
 				breadcrumbs: [{
@@ -39,10 +39,9 @@
 				showPreContent: false
 			});
 </script>
-
+<li><a href=https://gc-proto.github.io/weather/ut-fr.html"> French </a></li>
 <main role="main" property="mainContentOfPage" class="container">
 <h1 property="name" id="wb-cont" class="h2">Weather test links</h1>
-	<li><a href=https://gc-proto.github.io/weather/ut-en.html"> French </a></li>
 <section>
 
 <ul class="lst-spcd">
