--- a/ut-en.html
+++ b/ut-en.html
@@ -39,7 +39,7 @@
 				showPreContent: false
 			});
 </script>
-<li><a href=https://gc-proto.github.io/weather/ut-fr.html"> French </a></li>
+<li><a href="https://gc-proto.github.io/weather/ut-fr.html"> French </a></li>
 <main role="main" property="mainContentOfPage" class="container">
 <h1 property="name" id="wb-cont" class="h2">Weather test links</h1>
 <section>
